Proyecto Individual/force-app/main/default/objects/Module__c/fields/Module_type__c.field-meta.xml
<CustomField>
    <fullName>Module_type__c</fullName>
    <label>Module type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modulo</fullName>
            </value>
            <value>
                <fullName>Proyecto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>