Proyecto Individual/force-app/main/default/objects/Module__c/fields/Quantity_unit__c.field-meta.xml
<CustomField>
    <fullName>Quantity_unit__c</fullName>
    <label>Quantity unit</label>
    <summaryForeignKey>Unit__c.Module__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>