Proyecto Individual/force-app/main/default/objects/Module__c/fields/Time_estimate__c.field-meta.xml
<CustomField>
    <fullName>Time_estimate__c</fullName>
    <label>Time estimate</label>
    <summarizedField>Unit__c.Time_estimate__c</summarizedField>
    <summaryForeignKey>Unit__c.Module__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>