Proyecto Individual/force-app/main/default/objects/Module__c/validationRules/ActiveTest.validationRule-meta.xml
<ValidationRule>
    <fullName>ActiveTest</fullName>
    <active>true</active>
    <errorConditionFormula>IF((TEXT( Skill__c )=&quot;&quot;  ||   ISBLANK(Role__c)) &amp;&amp;  Active__c  ,  True, False)</errorConditionFormula>
    <errorMessage>Skill y Role no pueden estar vacías</errorMessage>
</ValidationRule>