Proyecto Individual/force-app/main/default/objects/Module__c/listViews/Modules.listView-meta.xml
<ListView>
    <fullName>Modules</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Modules</label>
</ListView>